# aws_ug_conference

./: main.py  pyproject.toml  requirements.txt
src/: __init__.py  config.py  utils.py
src/aws/: __init__.py  docker.py  ml.py
src/openai/: schema.py  service.py
