[tool.poetry]
name = "aws-conference"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "aws_conference"}]

[tool.poetry.dependencies]
python = "^3.10"
aiofauna = "^0.1.92"
openai = "^0.27.10"
boto3 = "^1.28.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
